welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: value or is not a member of Boolean
  if (weekday == true or vacation == true){
                      ^sleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (weekday == true or vacation == true){
  ^